feat: update api booking appointment
